# greatfet

./: CMakeLists.txt  Makefile
firmware/: CMakeLists.txt
firmware/blinky/: CMakeLists.txt
firmware/cmake/: greatfet.cmake
firmware/common/: fault_handler.c
firmware/flash_stub/: CMakeLists.txt  main.c
firmware/greatfet_usb/: CMakeLists.txt  greatfet_usb.c  usb_api_glitchkit_simple.c
firmware/greatfet_usb/classes/: logic_analyzer.c
host/: setup.py
host/greatfet/: board.py
host/greatfet/commands/: greatfet_ensure_access.py
host/greatfet/interfaces/: cc_debug.py
host/greatfet/programmers/: chipcon.py
libgreat/: CMakeLists.txt
